@@ -9,8 +9,8 @@ pkgdesc="Physical simulation of particle movements (server and clients)."
 arch=('i686' 'x86_64' 'armv7h')
 url="http://sourceforge.net/projects/spheresim/"
 license=('BSD 3-clause')
-depends=('qt5-base' 'mesa')
-makedepends=('git' 'cmake')
+depends=('qt5-base' 'mesa' 'nanomsg')
+makedepends=('git' 'cmake' 'cppnanomsg')
 options=()
 conflicts=('spheresim')
 provides=('spheresim')
