@@ -9,8 +9,8 @@ pkgdesc="Physical simulation of particle movements (server and clients). (mingw-
 arch=('any')
 url="http://sourceforge.net/projects/spheresim/"
 license=('BSD 3-clause')
-depends=('mingw-w64-crt' 'mingw-w64-qt5-base')
-makedepends=('git' 'mingw-w64-gcc' 'mingw-w64-cmake')
+depends=('mingw-w64-crt' 'mingw-w64-qt5-base' 'mingw-w64-nanomsg')
+makedepends=('git' 'mingw-w64-gcc' 'mingw-w64-cmake' 'mingw-w64-cppnanomsg')
 options=('!strip' '!buildflags' 'staticlibs')
 conflicts=('mingw-w64-spheresim')
 provides=('mingw-w64-spheresim')
