@@ -9,6 +9,7 @@
 * Added nanomsg install to .travis.yml file.
 * Added nanomsg library to QMake build files.
 * Fixed nanomsg library in QMake build files.
+* Added nanomsg dependencies to PKGBUILD files.
 
 SphereSim 3.0.3:
 * Removed custom Array class, replaced by std::vector.
